tests/resources/errors/errors5.ac
import std;
import std.Error;

void write_val(int64 val) {

#if OS_GROUP_WINDOWS
    void* handle = std.GetStdHandle(-11);
    uint32 written;
    char c = as(char) val;
    std.WriteFile(handle, &c, 1, &written, null);
#elif OS_GROUP_UNIX
    char c = as(char) val;
    std.write(1, &c, 1);
#endif

}

struct TestError :: *Error {
    const char* get_name() const {
        return "TestError";
    }
    const char* get_message() const {
        return "error raised!";
    }
}

struct A {
    int64 v1;
    int64 v2;
    int64 v3;
    int64 v4;
}

A foo(bool cond) raises TestError {
    if cond {
        return A{ 65, 66, 67, 68 };
    }

    raise TestError{};
}

void main() {
    A a = try foo(true);
    write_val(a.v1);
    write_val(a.v2);
    write_val(a.v3);
    write_val(a.v4);
    try foo(false);
}